// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar renders correctly  1`] = `
<DocumentFragment>
  .cache-nmxi06-StyledDiv {
  background: #ffffff;
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  bottom: 20px;
  box-shadow: 0px 0px 8px 2px #D4DAE766;
  height: 56px;
  left: 50%;
  padding: 16px;
  position: fixed;
  -webkit-transform: translate(-50%, 0);
  -moz-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  width: 600px;
  z-index: 2;
}

<div
    class="cache-nmxi06-StyledDiv e1qbxe4b0"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`ActionBar renders correctly with custom rank 1`] = `
<DocumentFragment>
  .cache-ydwxx6-StyledDiv {
  background: #ffffff;
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  bottom: 172px;
  box-shadow: 0px 0px 8px 2px #D4DAE766;
  height: 56px;
  left: 50%;
  padding: 16px;
  position: fixed;
  -webkit-transform: translate(-50%, 0);
  -moz-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  width: 600px;
  z-index: 2;
}

<div
    class="cache-ydwxx6-StyledDiv e1qbxe4b0"
  >
    I am rank 2
  </div>
</DocumentFragment>
`;
